Time: 4 ms (97.67%), Space: 46.2 MB (11.38%) - LeetHub